    - Tear-off menus are supported (and enabled by default).
    - Conditional breakpoints and breakpoints with ignore counts are now
      indicated by special breakpoint symbols.
    - Improved help system: In accordance with the Motif style guide,
      F1 invokes help on the item pointed at, while Shift+F1 lets you
      choose an item.
    - Value tips and selections now work for struct members, too: you
      can point at `A.B' or `A->B' and get the current value.
    - The maximum number of glyphs is now configurable at startup time.
      See the `maxGlyphs' resource for details.
    - DBX settings now also work with SGI DBX.

    Bug fixes:
    - Data displays are no longer cluttered by Sun DBX 3.0 warnings.
    - Paned window management has been improved a lot.
    - DDD now works around a Motif 2.1/XFree86 bug that caused glyphs
      to disappear.  See the `cacheGlyphImages' resource for details.
    - One-letter options like `-b BPS' or `-x FILE' work again.

    Changes in configuration and building:
    - LessTif 0.83 is supported (and now the default test environment
      of the DDD developers).  See `patches/' for some useful patches.

    Compatibility notes:
    - Some resources were renamed for clarity:
      The `toolBar' resource is now named `commandToolBar'.
      The `colorIcons' resource is now named `colorWMIcons'.
      Please rename all references to these DDD resources.
    - To enable a DDD 2.x style window layout, use

	Ddd*commonToolBar:    off
	Ddd*toolbarsAtBottom: on

      in your `~/.ddd/init' file; disable images and captions via
      `Edit | Preferences | Startup | Toolbar appareance' if desired.

    And once more, several more minor improvements and bug fixes; see
    the `ChangeLog' file for details.


DDD 2.2.3
---------

    DDD 2.2.3 fixes some problems reported for DDD 2.2.2:
    - `struct' recognition with DBX now works again.  (This one was serious.)
    - `configure' now checks for correct ISO C++ <stdexcept>.